--- a/WebBanHangOnline/Views/Home/Index.cshtml
+++ b/WebBanHangOnline/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="~/Content/assets/styles/main_styles.css">
 <!-- Slider -->
 
-<div class="main_slider" style="background-image: url(Content/assets/images/backgroundd.jpg)">
+<div class="main_slider" style="background-image: url(Content\assets\images\pg.png) ">
     <div class="container fill_height">
         <div class="row align-items-center fill_height">
             <div class="col">
